<package>
 <name>ras_group8_localization</name>
  <version>0.1.0</version>
  <description>
    Localization package.
  </description>
  <license>BSD</license>

  <url type="website">https://github.com/RAS17-Group-8/ras_group8_localization</url>

  <maintainer email="seb.lindberg@gmail.com">Sebastian Lindberg</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ras_group8_map</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ras_group8_map</run_depend>
  
  <test_depend>rostest</test_depend>
  <test_depend>ras_group8_util</test_depend>
</package>
